--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ build/classes/hibernate.properties
 src/hibernate.properties
 src/view/FrmLogin.java
 build/classes/hibernate.properties
+build/classes/hibernate.properties
